<resources>
    <string name="app_name">Movie Catalogue Submission 3</string>

    <string name="movie">Movies</string>
    <string name="tv_show">Tv Show</string>
    <string name="favorites">Favorite</string>
    <string name="user_score">User Score</string>
    <string name="overview">Overview</string>
    <string name="api_img">https://image.tmdb.org/t/p/w92</string>
    <string name="api_img_detail">https://image.tmdb.org/t/p/w500</string>
    <string name="poster">Poster</string>
    <string name="delete">Berhasil Dihapus</string>
    <string name="save">Berhasil Disimpan</string>

</resources>
